@@ -3,7 +3,21 @@ This is now called Post-Auth-Type, for consistency.
 Post-Auth-Type is used to select between groupings of
 modules in the post-auth stanza using arbitrary attributes.
 It is functionally identical to Acct-Type, apart from
-the name of the attribute. This means that (unlike
-Autz-Type) the attribute must be set before the stanza
-is run. Changes to Post-Auth-Type during post-auth will
-have no effect.
+the name of the attribute and its dealing with rejected
+requests.. This means that (unlike Autz-Type) the attribute
+must be set before the stanza is run. Changes to
+Post-Auth-Type during post-auth will have no effect.
+
+If a request has been rejected, the value of Post-Auth-Type
+is overwritten with REJECT automatically, so anonymous
+modules like my_ippool below will not be run, only
+modules like my_detail below in the appropriate substanza
+will be run.
+
+post-auth {
+	my_ippool
+
+	Post-Auth-Type REJECT {
+		my_detail
+	}
+}
